<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pills"
    tools:context="no.madrobot.vitaminator.MainMenu">

    <TextView
        android:id="@+id/welcome_textbox"
        android:layout_width="219dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:autoSizeTextType="none"
        android:autoText="true"
        android:text="Welcome to Vitaminator! \n This program will help You remember to take Your vitamins."
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/check_status_button_id"
        android:layout_width="172dp"
        android:layout_height="55dp"
        android:layout_marginEnd="120dp"
        android:layout_marginStart="119dp"
        android:layout_marginTop="20dp"
        android:text="@string/check_status_but"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_is_textbox" />

    <Button
        android:id="@+id/take_button_id"
        android:layout_width="139dp"
        android:layout_height="55dp"
        android:layout_marginEnd="139dp"
        android:layout_marginStart="139dp"
        android:text="@string/take_a_pill_but"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_status_button_id" />

    <Button
        android:id="@+id/add_button_id"
        android:layout_width="117dp"
        android:layout_height="55dp"
        android:layout_marginEnd="157dp"
        android:layout_marginStart="157dp"
        android:text="@string/add_but"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/take_button_id" />

    <Button
        android:id="@+id/remove_button_id"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginEnd="160dp"
        android:layout_marginStart="159dp"
        android:text="@string/remove_but"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_button_id" />

    <Button
        android:id="@+id/exit_button_id"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/exit_but"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove_button_id"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/today_is_textbox"
        android:layout_width="86dp"
        android:layout_height="46dp"
        android:layout_marginEnd="176dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="20dp"
        android:text=" "
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_textbox" />

    <ImageButton
        android:id="@+id/alarmButtonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

</android.support.constraint.ConstraintLayout>
